added test case for ORC PCS ranking metric; still failing (maybe wrong certificates?)
Change-Id: I965ae4582c97adad16f3e05b5a7d048c5396ea9a